--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
 		</h2>
 	</aside>
     <aside class="mapa">
-		
+			<a href="https://www.google.com.ar/maps/place/Bernardo+de+Irigoyen+602,+B1609BFJ+Boulogne,+Provincia+de+Buenos+Aires/@-34.5042206,-58.5752199,17z/data=!3m1!4b1!4m16!1m9!3m8!1s0x95bcba8db8a3a207:0x247c712cfb30f80c!2sBernardo+de+Irigoyen+602,+B1609BFJ+Boulogne,+Provincia+de+Buenos+Aires!3b1!8m2!3d-34.5042206!4d-58.5730312!10e5!16s%2Fg%2F11c25r14nx!3m5!1s0x95bcba8db8a3a207:0x247c712cfb30f80c!8m2!3d-34.5042206!4d-58.5730312!16s%2Fg%2F11c25r14nx" target="_blank">
 			<img src="./ASSETS/direccion.png" alt="foto direccion">
+			</a>
 	</aside>
 	<aside class="direccion">
 			<h3>
-				Encontranos Zona Norte <br> <br>
+				En Zona Norte <br> <br>
 				Nuestra Direccion:
 				Bernardo de Irigoyen 602, <br><br> B1609BFJ Boulogne, Provincia de Buenos Aires
 			</h3>
